--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
     "lib-flexible": "^0.3.2",
+    "mysql": "^2.18.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
